@@ -1,3 +1,10 @@
+Fri, 04 Apr 2008 09:46:23 +0200 <thp@perli.net>
+Increase filename size limitation from 50 to 100 chars in MP3 player sync
+
+	* src/gpodder/sync.py: Increase the number at which file names are cut
+	down in length to 100 characters and also cut folder names to that
+	length; thanks to Bernd Schlapsi for reporting this bug on the list
+
 Sun, 30 Mar 2008 10:48:41 +0200 <thp@perli.net>
 Make the Quit buttons actually quit when using the tray icon
 
